# crux-top-lists

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: cron.yml  github-actions.yml  manual.yml  update-data.yml
cruxdownloader/: __main__.py  downloader.py
